# okx-quant-agent

./: .dockerignore  .env.example  .gitignore  AI-Trading-Plan.md  CODE_MAP.md  Dockerfile  PROGRESS.md  README.md  config.py  docker-compose.yml  indicators.py  main.py  okx_client.py  pyproject.toml  requirements.txt  status_detail.txt  status_output.txt  time_utils.py
agent/: __init__.py  audit.py  report_analyzer.py  signal_bridge.py  strategy_interpreter.py
agents/: __init__.py  agent1_technical.py  agent2_news.py  agent3_trader.py  agent4_reviewer.py  change_detector.py  confidence_scorer.py  config.py  deepseek_caller.py  event_bus.py  helpers.py  kline_builder.py  llm_shadow.py  market_state.py  notifier.py  okx_ws.py  onchain_collector.py  param_adapter.py  percentile_tracker.py  position_monitor.py  review_generator.py  risk_layer.py  rule_decider.py  signal_aligner.py  status_writer.py  trade_executor.py
backtest/: analyzer.py  engine.py  metrics.py
data/: collector.py  db_manager.py  eth_heartbeat.py  heartbeat_db.py  quality.py  storage.py
execution/: __init__.py  ai_executor.py  futures_paper.py  intrabar.py  order.py  paper.py  paper_runner.py  trade_result.py
frontend/: __init__.py  app.py  requirements.txt
logs/: restart_out.txt
notification/: notifier.py
risk/: recovery.py  rules.py  stop_loss.py
scripts/: __init__.py  backtest_daily_trend.py  check_status.py  compare_timeframes.py  daily_trend_baseline.py  edit_prompt.py  factor_ic_eval.py  generate_code_map.py  regime_filter_test.py  robustness_check.py  smoke_pages.py  (+2 more)
(+135 files in other folders)
